amendments to the model

--- a/notebooks/main_notebook.ipynb
+++ b/notebooks/main_notebook.ipynb
@@ -696,6 +696,7 @@
     "test_labels = []\n",
     "with torch.no_grad():\n",
     "    for images, labels in test_loader:\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "        outputs = model(images)\n",
     "        predictions.extend(outputs.tolist())\n",
     "        test_labels.extend(labels.tolist())\n",
@@ -887,6 +888,7 @@
     "test_labels = []\n",
     "with torch.no_grad():\n",
     "    for images, labels in test_loader:\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "        outputs = model(images)\n",
     "        predictions.extend(outputs.tolist())\n",
     "        test_labels.extend(labels.tolist())\n",
