completed the readme file and added commetns

--- a/notebooks/main_notebook.ipynb
+++ b/notebooks/main_notebook.ipynb
@@ -77,6 +77,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Display one image per class\n",
     "def show_one_image_per_class(image_paths, labels):\n",
     "    classes = set(labels)\n",
     "    num_classes = len(classes)\n",
@@ -107,6 +108,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Plot the distribution of classes\n",
     "def plot_class_distribution(labels):\n",
     "    class_counts = {label: labels.count(label) for label in set(labels)}\n",
     "\n",
@@ -120,9 +122,9 @@
     "    plt.subplot(1, 2, 2)\n",
     "    plt.pie(class_counts.values(), labels=class_counts.keys(), autopct='%1.1f%%')\n",
     "    plt.title('Class Distribution (Pie Chart)')\n",
-    "    \n",
+    "\n",
     "    plt.tight_layout()\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ],
    "id": "edf9beb6eadbfe50",
    "outputs": [],
@@ -137,6 +139,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Get sizes of images\n",
     "def get_image_sizes(image_paths):\n",
     "    sizes = []\n",
     "    for img_path in image_paths:\n",
@@ -157,6 +160,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Plot distribution of image sizes\n",
     "def plot_image_sizes(image_paths):\n",
     "    sizes = get_image_sizes(image_paths)\n",
     "    width = [size[0] for size in sizes]\n",
@@ -257,7 +261,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Подготовка данных",
+   "source": "## Data preparation",
    "id": "be9d355eb9865fdf"
   },
   {
@@ -269,6 +273,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Define data transformations\n",
     "new_width = 64\n",
     "new_height = 64\n",
     "\n",
@@ -293,6 +298,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Split the dataset into training, validation, and test sets\n",
     "train_data, val_test_data, train_labels, val_test_labels = train_test_split(transformed_images, labels, train_size=0.7, random_state=42, stratify=labels)\n",
     "\n",
     "val_data, test_data, val_labels, test_labels = train_test_split(val_test_data, val_test_labels, train_size=0.5, random_state=42, stratify=val_test_labels)"
@@ -334,10 +340,12 @@
    },
    "cell_type": "code",
    "source": [
+    "# Convert the training, validation, and test data into PyTorch tensors\n",
     "train_data_tensor = torch.stack(train_data)\n",
     "val_data_tensor = torch.stack(val_data)\n",
     "test_data_tensor = torch.stack(test_data)\n",
     "\n",
+    "# Convert the training, validation, and test labels into PyTorch tensors\n",
     "train_labels_tensor = torch.tensor(train_labels)\n",
     "val_labels_tensor = torch.tensor(val_labels)\n",
     "test_labels_tensor = torch.tensor(test_labels)"
@@ -355,12 +363,14 @@
    },
    "cell_type": "code",
    "source": [
+    "# Create TensorDatasets for training, validation, and test sets\n",
     "train_dataset = TensorDataset(train_data_tensor, train_labels_tensor)\n",
     "val_dataset = TensorDataset(val_data_tensor, val_labels_tensor)\n",
     "test_dataset = TensorDataset(test_data_tensor, test_labels_tensor)\n",
     "\n",
     "batch_size = 64\n",
     "\n",
+    "# Create DataLoaders for training, validation, and test sets\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size)"
@@ -372,7 +382,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Моделирование",
+   "source": "## Modelling",
    "id": "b459fbbacd204485"
   },
   {
@@ -384,9 +394,11 @@
    },
    "cell_type": "code",
    "source": [
+    "# Define a convolutional neural network class\n",
     "class CNNNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
+    "        # Define convolutional layers\n",
     "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
     "        self.pool1 = nn.MaxPool2d(2)\n",
     "        self.conv2 = nn.Conv2d(32, 16, kernel_size=3, padding=1)\n",
@@ -395,11 +407,14 @@
     "        self.pool3 = nn.MaxPool2d(2)\n",
     "        self.conv4 = nn.Conv2d(8, 4, kernel_size=3, padding=1)\n",
     "        self.pool4 = nn.MaxPool2d(2)\n",
+    "        # Define fully connected layers\n",
     "        self.fc1 = nn.Linear(4 * 4 * 4, 32)\n",
     "        self.fc2 = nn.Linear(32, 2)\n",
+    "        # Define activation function\n",
     "        self.act = nn.ReLU()\n",
     "\n",
     "    def forward(self, x):\n",
+    "        # Forward pass through the network\n",
     "        out = self.pool1(self.act(self.conv1(x)))\n",
     "        out = self.pool2(self.act(self.conv2(out)))\n",
     "        out = self.pool3(self.act(self.conv3(out)))\n",
@@ -407,7 +422,7 @@
     "        out = out.view(-1, 4 * 4 * 4)\n",
     "        out = self.act(self.fc1(out))\n",
     "        out = self.fc2(out)\n",
-    "        \n",
+    "\n",
     "        return out"
    ],
    "id": "62bfc448b5b7b13c",
@@ -418,8 +433,11 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# Load a pre-trained ResNet-18 model\n",
     "pretrained_model = models.resnet18(pretrained=True)\n",
+    "# Get the number of input features of the last fully connected layer\n",
     "num_ftrs = pretrained_model.fc.in_features\n",
+    "# Replace the fully connected layer with a new one for binary classification\n",
     "pretrained_model.fc = nn.Linear(num_ftrs, 2)"
    ],
    "id": "7328da1f619441f0",
@@ -434,7 +452,10 @@
     }
    },
    "cell_type": "code",
-   "source": "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")",
+   "source": [
+    "# Check if CUDA is available and set the device accordingly\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ],
    "id": "f6d74e8a7c9a66f1",
    "outputs": [],
    "execution_count": 168
@@ -448,6 +469,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Define the training loop function\n",
     "def training_loop(n_epochs, model, optimizer, criterion, train_loader, val_loader):\n",
     "    train_losses = []\n",
     "    val_losses = []\n",
@@ -493,6 +515,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Define the function to plot training and validation losses\n",
     "def plot_losses(train_losses, val_losses):\n",
     "    plt.plot(train_losses, label='Training loss')\n",
     "    plt.plot(val_losses, label='Validation loss')\n",
@@ -515,11 +538,13 @@
    },
    "cell_type": "code",
    "source": [
+    "# Define the function to evaluate the model\n",
     "def evaluate_model(model, data_loader):\n",
     "    loss = 0.0\n",
     "    correct = 0.0\n",
     "    total = 0.0\n",
-    "\n",
+    "    \n",
+    "    model = model.to(device)\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        for images, labels in data_loader:\n",
@@ -542,7 +567,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "#### Кастомная модель",
+   "source": "#### Custom model",
    "id": "e3b9f3c7a0c530ae"
   },
   {
@@ -556,6 +581,7 @@
    "source": [
     "n_epochs = 25\n",
     "model = CNNNet()\n",
+    "model = model.to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "learning_rate = 0.0007\n",
     "optimizer = optim.Adam(model.parameters(), lr=learning_rate)"
@@ -746,6 +772,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Plot a confusion matrix\n",
     "conf_matrix = confusion_matrix(test_labels, predicted_classes)\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues')\n",
@@ -772,7 +799,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "#### Предобученная модель",
+   "source": "#### Pretrained model",
    "id": "ddf3f7a358cc9383"
   },
   {
@@ -786,6 +813,7 @@
    "source": [
     "n_epochs = 6\n",
     "model = pretrained_model\n",
+    "model = model.to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "learning_rate = 0.001\n",
     "optimizer = optim.Adam(model.parameters(), lr=learning_rate)"
@@ -883,6 +911,7 @@
    },
    "cell_type": "code",
    "source": [
+    "model = model.to(device)\n",
     "model.eval()\n",
     "predictions = []\n",
     "test_labels = []\n",
@@ -960,51 +989,6 @@
     }
    ],
    "execution_count": 384
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "## Отчет по исследованию нейронных сетей для классификации изображений собак и кошек\n",
-    "\n",
-    "#### Введение\n",
-    "\n",
-    "Цель данного исследования состоит в разработке и оценке различных моделей нейронных сетей для классификации изображений собак и кошек. Данная задача является классической задачей компьютерного зрения.\n",
-    "\n",
-    "#### Методы\n",
-    "\n",
-    "В данном исследовании использовались следующие методы:\n",
-    "\n",
-    "Загрузка и предобработка данных.\n",
-    "Создание и обучение кастомной нейронной сети с использованием сверточных и полносвязных слоев.\n",
-    "Использование предобученной модели ResNet18, с заменой последнего полносвязного слоя для адаптации к задаче классификации собак и кошек.\n",
-    "Обучение моделей на тренировочном наборе данных и валидация на валидационном наборе данных.\n",
-    "Оценка производительности моделей на тестовом наборе данных с помощью метрик точности, полноты, F1-меры и confusion matrix.\n",
-    "Эксперименты\n",
-    "\n",
-    "Исследование проводилось на наборе данных, содержащем изображения собак и кошек. Данные были предварительно обработаны и разделены на тренировочный, валидационный и тестовый наборы.\n",
-    "\n",
-    "#### Результаты\n",
-    "\n",
-    "Кастомная нейронная сеть показала точность на уровне 83% на тестовом наборе данных.\n",
-    "Предобученная модель ResNet18 показала более высокую точность на уровне 90% на тестовом наборе данных.\n",
-    "Обсуждение\n",
-    "\n",
-    "Результаты показывают, что использование предобученных моделей может значительно повысить производительность нейронных сетей на задаче классификации изображений собак и кошек. Более того, результаты подтверждают важность выбора правильных архитектур и гиперпараметров для достижения высокой производительности модели.\n",
-    "\n",
-    "#### Заключение\n",
-    "\n",
-    "Исследование позволяет сделать вывод о том, что для задачи классификации изображений собак и кошек эффективнее использовать предобученные модели нейронных сетей. Дальнейшие исследования могут быть направлены на тонкую настройку гиперпараметров и архитектур моделей для еще более высокой производительности."
-   ],
-   "id": "f638efe92fb05977"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "57928bfbad2625f1"
   }
  ],
  "metadata": {
